@@ -573,9 +573,9 @@ BEGIN
                     WS_TABSTOP,12,103,249,10
     LTEXT           "Ports",IDC_SETTINGS_PORTS,230,17,18,8
     LTEXT           "TCP",IDC_SETTINGS_PORT_TCP,209,31,15,8,NOT WS_GROUP
-    EDITTEXT        IDC_PORT_TCP,230,28,29,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_PORT_TCP,230,28,29,14,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "UDP",IDC_SETTINGS_PORT_UDP,209,48,16,8
-    EDITTEXT        IDC_PORT_UDP,230,45,30,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_PORT_UDP,230,45,30,14,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "External / WAN IP",IDC_SETTINGS_IP,59,59,68,8,NOT 
                     WS_GROUP
     EDITTEXT        IDC_EXTERNAL_IP,59,69,99,14,ES_AUTOHSCROLL
@@ -598,6 +598,8 @@ BEGIN
     CONTROL         "Use SOCKS5 server to resolve hostnames",
                     IDC_SOCKS_RESOLVE,"Button",BS_AUTOCHECKBOX | WS_GROUP | 
                     WS_TABSTOP,59,207,165,10
+    LTEXT           "TLS",IDC_SETTINGS_PORT_TLS,209,64,21,8
+    EDITTEXT        IDC_PORT_TLS,230,61,30,14,ES_AUTOHSCROLL | ES_NUMBER
 END
 
 IDD_WINDOWSPAGE DIALOGEX 0, 0, 275, 225
