@@ -294,13 +294,13 @@ struct ShareLoader : public SimpleXMLReader::CallBack {
 						break;
 					}
 				}
-			} else if(cur != NULL) {
+			} else if(cur != 0) {
 				cur = new ShareManager::Directory(getAttrib(attribs, "Name", 0), cur);
 				cur->addType(SearchManager::TYPE_DIRECTORY); // needed since we match our own name in directory searches
 				cur->getParent()->directories[cur->getName()] = cur;
 			}
 
-			if(simple)
+			if(simple && cur)
 				cur = cur->getParent();
 			else
 				depth++;
