@@ -507,7 +507,8 @@ string ResourceManager::strings[] = {
 "Sounds", 
 "Note; because of changing download speeds, this is not 100% accurate...", 
 "View status messages in main chat", 
-"TCP Port", 
+"TCP", 
+"TLS", 
 "Mini slot size", 
 "Autoprio settings", 
 "Highest prio max size", 
@@ -518,7 +519,7 @@ string ResourceManager::strings[] = {
 "Show timestamps in chat by default", 
 "Set timestamps", 
 "Toggle window when selecting an active tab", 
-"UDP Port", 
+"UDP", 
 "Unfinished downloads directory", 
 "Line speed (upload)", 
 "Sharing", 
@@ -1129,6 +1130,7 @@ string ResourceManager::names[] = {
 "SettingsSpeedsNotAccurate", 
 "SettingsStatusInChat", 
 "SettingsTcpPort", 
+"SettingsTlsPort", 
 "SettingsTextMinislot", 
 "SettingsPrioAutoprio", 
 "SettingsPrioHighest", 
