@@ -510,7 +510,8 @@ enum Strings { // @DontAdd
 	SETTINGS_SOUNDS, // "Sounds"
 	SETTINGS_SPEEDS_NOT_ACCURATE, // "Note; because of changing download speeds, this is not 100% accurate..."
 	SETTINGS_STATUS_IN_CHAT, // "View status messages in main chat"
-	SETTINGS_TCP_PORT, // "TCP Port"
+	SETTINGS_TCP_PORT, // "TCP"
+	SETTINGS_TLS_PORT, // "TLS"
 	SETTINGS_TEXT_MINISLOT, // "Mini slot size"
 	SETTINGS_PRIO_AUTOPRIO, // "Autoprio settings"
 	SETTINGS_PRIO_HIGHEST, // "Highest prio max size"
@@ -521,7 +522,7 @@ enum Strings { // @DontAdd
 	SETTINGS_TIME_STAMPS, // "Show timestamps in chat by default"
 	SETTINGS_TIME_STAMPS_FORMAT, // "Set timestamps"
 	SETTINGS_TOGGLE_ACTIVE_WINDOW, // "Toggle window when selecting an active tab"
-	SETTINGS_UDP_PORT, // "UDP Port"
+	SETTINGS_UDP_PORT, // "UDP"
 	SETTINGS_UNFINISHED_DOWNLOAD_DIRECTORY, // "Unfinished downloads directory"
 	SETTINGS_UPLOAD_LINE_SPEED, // "Line speed (upload)"
 	SETTINGS_UPLOADS, // "Sharing"
