@@ -373,6 +373,8 @@
 #define IDC_SOCKET_OUT_BUFFER           1318
 #define IDC_SSL_CERTIFICATE_FILE        1318
 #define IDC_TLS_CERTIFICATE_FILE        1318
+#define IDC_TLS_PORT                    1318
+#define IDC_PORT_TLS                    1318
 #define IDC_SETTINGS_SOCKET_OUT_BUFFER  1319
 #define IDC_SETTINGS_SOCKET_IN_BUFFER   1320
 #define IDC_CHECK1                      1321
@@ -423,11 +425,11 @@
 #define IDC_CLOSE_ALL_PM                1423
 #define IDC_BROWSE_PRIVATE_KEY          1423
 #define IDC_CLOSE_ALL_OFFLINE_PM        1424
-#define IDC_BROWSE_OWN_CERTIFICATE      1424
 #define IDC_BROWSE_CERTIFICATE          1424
 #define IDC_CLOSE_ALL_DIR_LIST          1425
 #define IDC_BROWSE_TRUSTED_PATH         1425
 #define IDC_CLOSE_ALL_SEARCH_FRAME      1426
+#define IDC_SETTINGS_PORT_TLS           1427
 #define IDC_BROWSELIST                  3000
 #define IDC_REMOVE_SOURCE               3500
 #define IDC_PM                          4000
@@ -469,7 +471,7 @@
 #define _APS_3D_CONTROLS                     1
 #define _APS_NEXT_RESOURCE_VALUE        246
 #define _APS_NEXT_COMMAND_VALUE         32789
-#define _APS_NEXT_CONTROL_VALUE         1426
+#define _APS_NEXT_CONTROL_VALUE         1428
 #define _APS_NEXT_SYMED_VALUE           105
 #endif
 #endif
